all.yaml
---
# Source: website-map/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-website-map-backend
  labels:
    helm.sh/chart: website-map-0.1.0
    app.kubernetes.io/name: website-map
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: website-map
    app.kubernetes.io/instance: release-name
---
# Source: website-map/templates/backend.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-website-map-backend
  namespace: test
  labels:
    helm.sh/chart: website-map-0.1.0
    app.kubernetes.io/name: website-map
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: website-map
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app: backend
        helm.sh/chart: website-map-0.1.0
        app.kubernetes.io/name: website-map
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      securityContext:
        {}
      containers:
        - name: website-map-backend
          securityContext:
            {}
          image: "docker.io/nginx@sha256:c15da6c91de8d2f436196f3a768483ad32c258ed4e1beb3d367a27ed67253e66"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: content-vol
              mountPath: /content
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
          resources:
            {}
      volumes:
        - name: content-vol
          persistentVolumeClaim:
            claimName: website-map-data
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: map-entrypoint
          configMap:
            name: scripts
            items:
              - key: map.entrypoint.sh
                path: map.entrypoint.sh
        - name: map-update
          configMap:
            name: scripts
            items:
              - key: map.update.sh
                path: map.update.sh
        - name: map-build-zip
          configMap:
            name: scripts
            items:
              - key: map.build.zip.sh
                path: map.build.zip.sh
        - name: get-content
          configMap:
            name: get-content
            items:
              - key: get_content.py
                path: get_content.py
        - name: github-secret
          secret:
            secretName: website-map-secrets
            items:
              - key: github-secret
                path: github-secret
---
# Source: website-map/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-website-map
  namespace: test
  labels:
    helm.sh/chart: website-map-0.1.0
    app.kubernetes.io/name: website-map
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: map.nycmesh.net
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-website-map-backend
                port:
                  number: 80
